ajustement de la couleur des barres "header"/"footer" des applications - utilisation de "bg-primary" pour les "header" (= même couleur qu'en page principale) - utilisation de "#333" pour les "footer" (entre le #222 de body et le #444 de .progress dans le thème "darkly") - correction du "footer" qui restait visible pour rien dans "code-editor.html"

--- a/public/nimbus.css
+++ b/public/nimbus.css
@@ -51,8 +51,8 @@
 
 .nimbus-viewer { width: 100%; height: 100%; }
 .nimbus-viewer .nimbus-toolbar-separator { display: inline-block; height: 24px; margin: 6px; width: 3px; border-width: 0 1px 0 1px; border-style: dashed; border-color: #888; }
-.nimbus-viewer header { z-index: 2; background-color: #444; padding: 5px 10px; text-align: center; }
-.nimbus-viewer footer { z-index: 2; background-color: #444; padding: 5px 10px; text-align: center; }
+.nimbus-viewer header { z-index: 2; background-color: #333; padding: 5px 10px; text-align: center; }
+.nimbus-viewer footer { z-index: 2; background-color: #333; padding: 5px 10px; text-align: center; }
 .nimbus-viewer header:empty { display: none; }
 .nimbus-viewer footer:empty { display: none; }
 .nimbus-viewer.nimbus-static-toolbars body { width: 100%; height: 100%; display: flex; flex-direction: column; }
@@ -60,8 +60,8 @@
 .nimbus-viewer.nimbus-static-toolbars main { flex: auto; z-index: 0; overflow: auto; }
 .nimbus-viewer.nimbus-static-toolbars footer { flex: none; }
 .nimbus-viewer.nimbus-hideable-toolbars body { width: 100%; height: 100%; }
-.nimbus-viewer.nimbus-hideable-toolbars header { position: fixed; top: 0; left: 0; right: 0; background-color: rgba(0,0,0,0.4); }
+.nimbus-viewer.nimbus-hideable-toolbars header { position: fixed; top: 0; left: 0; right: 0; }
 .nimbus-viewer.nimbus-hideable-toolbars main { width: 100%; height: 100%; z-index: 0; overflow: auto; }
-.nimbus-viewer.nimbus-hideable-toolbars footer { position: fixed; bottom: 0; left: 0; right: 0; background-color: rgba(0,0,0,0.4); }
+.nimbus-viewer.nimbus-hideable-toolbars footer { position: fixed; bottom: 0; left: 0; right: 0; }
 .nimbus-viewer.nimbus-hidden-toolbars header { display: none; }
 .nimbus-viewer.nimbus-hidden-toolbars footer { display: none; }
